fixed mobile text selection bug

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			
 			<div class="position-absolute zindex-top mobile-cover-full-image" id="appstore"></div>
 			<div class="width-full height-full background-blue position-absolute zindex-3 opacity-50" id="main-image-cover">
-				<h1 class="font-white zindex-top no-margin position-absolute-middle title-font-size unselectable no-cursor" id="title">hackGSU</h1>
+				<h1 class="font-white zindex-top no-margin position-absolute-middle title-font-size  no-cursor" id="title">hackGSU</h1>
 			</div>
 			<div class="position-relative" id="back-image"></div>
 				<!-- <img class="width-full invisible" src="images/top-image-sizer.png"> -->
@@ -23,9 +23,9 @@
 			<div class="width-full height-full zindex-top position-absolute position-absolute-top">
 				<div class="font-white position-absolute top-10 left-5p zindex-top mobile-top-links-positioning">
 					<div class="mobile-top-links-container">
-						<div class="position-relative float-left link unselectable width-third">FAQ</div>
-						<div class="position-relative float-left link unselectable width-third">Sponsors</div>
-						<div class="position-relative float-left link unselectable width-third">Gallery</div>
+						<div class="position-relative float-left link  width-third">FAQ</div>
+						<div class="position-relative float-left link  width-third">Sponsors</div>
+						<div class="position-relative float-left link  width-third">Gallery</div>
 					</div>
 				</div>
 			</div>
@@ -35,55 +35,55 @@
 		<!-- schedule -->
 		<div class="width-full height-auto position-relative float-left overflow-x-hidden" id="schedule">
 			<div class="height-full ad-avoider position-relative float-left" id="schedule-container">
-				<h1 class="unselectable no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="schedule-title">Schedule</h1>
+				<h1 class=" no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="schedule-title">Schedule</h1>
 				<div class="" id="schedule-wrapper">
 					<!-- Agenda -->
 					<div class="day-sign position-relative" id="">
 						<div class="day-box position-relative float-left width-full height-auto">
-							<h2 class="bump-top-left unselectable no-cursor sky-text">Friday 21<sup>st</sup></h2>
+							<h2 class="bump-top-left  no-cursor sky-text">Friday 21<sup>st</sup></h2>
 							<div class="agenda-tracker position-absolute sky-back"></div>
 							<div class="agenda-object" id="agenda-object-selected">
-								<span class="agenda-time unselectable" id="">5pm</span>
+								<span class="agenda-time " id="">5pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Early Check-In Begins/<br>Late Registration*</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">6pm</span>
+								<span class="agenda-time " id="">6pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Check-In</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">6:30pm</span>
+								<span class="agenda-time " id="">6:30pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Dinner</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">7pm</span>
+								<span class="agenda-time " id="">7pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Opening Ceremonies</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">8pm</span>
+								<span class="agenda-time " id="">8pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Hacking Begins<br>Idea Mixer/ Team Forming</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">8:30pm</span>
+								<span class="agenda-time " id="">8:30pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Development<br>Workshop A</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">9:30pm</span>
+								<span class="agenda-time " id="">9:30pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Development<br>Workshop B</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">10:30pm</span>
+								<span class="agenda-time " id="">10:30pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Development<br>Workshop C</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">12am</span>
+								<span class="agenda-time " id="">12am</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Friday Midnight<br>Madness</span>
 							</div>
@@ -91,50 +91,50 @@
 					</div>
 					<div class="day-sign position-relative" id="">
 						<div class="day-box position-relative float-left width-full height-auto">
-							<h2 class="bump-top-left unselectable no-cursor sky-text">Saturday 22<sup>nd</sup></h2>
+							<h2 class="bump-top-left  no-cursor sky-text">Saturday 22<sup>nd</sup></h2>
 							<div class="agenda-tracker position-absolute height-full sky-back"></div>
 							<div class="agenda-object" id="agenda-object-selected">
-								<span class="agenda-time unselectable" id="">8am</span>
+								<span class="agenda-time " id="">8am</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Breakfast</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">11am</span>
+								<span class="agenda-time " id="">11am</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Development<br>Workshop D</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">1pm</span>
+								<span class="agenda-time " id="">1pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Lunch</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">1:30pm</span>
+								<span class="agenda-time " id="">1:30pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">TBD</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">2pm</span>
+								<span class="agenda-time " id="">2pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Development<br>Workshop E</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">3pm</span>
+								<span class="agenda-time " id="">3pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">TBD</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">6pm</span>
+								<span class="agenda-time " id="">6pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Dinner</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">9pm</span>
+								<span class="agenda-time " id="">9pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Snack</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">12am</span>
+								<span class="agenda-time " id="">12am</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Saturday Midnight<br>Madness</span>
 							</div>
@@ -142,30 +142,30 @@
 					</div>
 					<div class="day-sign position-relative" id="">
 						<div class="day-box position-relative float-left width-full height-auto">
-							<h2 class="bump-top-left unselectable no-cursor sky-text">Sunday 23<sup>rd</sup></h2>
+							<h2 class="bump-top-left  no-cursor sky-text">Sunday 23<sup>rd</sup></h2>
 							<div class="agenda-tracker short-tracker position-absolute sky-back"></div>
 							<div class="agenda-object" id="agenda-object-selected">
-								<span class="agenda-time unselectable" id="">8am</span>
+								<span class="agenda-time " id="">8am</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Breakfast</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">9am</span>
+								<span class="agenda-time " id="">9am</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Submit to Devpost<br>Hacking Ends</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">10am</span>
+								<span class="agenda-time " id="">10am</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Hack Expo</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">11:30am</span>
+								<span class="agenda-time " id="">11:30am</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Finalist Demos</span>
 							</div>
 							<div class="agenda-object" id="">
-								<span class="agenda-time unselectable" id="">12:15pm</span>
+								<span class="agenda-time " id="">12:15pm</span>
 								<div class="agenda-trackball"></div>
 								<span class="agenda-text">Closing/<br>Award Ceremonies</span>
 							</div>
@@ -185,7 +185,7 @@
 		<!-- little faq -->
 		<div class="height-auto width-full berry-back position-relative float-left" id="bottom">
 			<div class="height-full ad-avoider position-relative float-left">
-				<h1 class="unselectable no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="faq-title">FAQ</h1>
+				<h1 class=" no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="faq-title">FAQ</h1>
 				<div class="faq-container position-relative float-left height-full width-full">
 					<div class="faq-item float-left clear-left">
 			        	<h4>What is hackGSU?</h4>
@@ -260,7 +260,7 @@
 		<!-- blurred programmer -->
 		<div class="height-full-screen width-full-screen position-relative float-left">
 			<div class="width-full height-full background-teal position-absolute zindex-3 opacity-50" id="main-image-cover">
-				<div class="zindex-top no-margin position-absolute-middle unselectable no-cursor center-text eat-sleep">
+				<div class="zindex-top no-margin position-absolute-middle  no-cursor center-text eat-sleep">
 					<h1 class="font-white" id="">EAT</h1>
 					<h1 class="font-white" id="">SLEEP</h1>
 					<h1 class="font-white" id="hack-text">HACK</h1>
@@ -275,7 +275,7 @@
 		<!-- sponsors -->
 		<div class="width-full height-full-screen position-relative float-left mobile-cover-full-image teal-back" id="sponsors">
 			<div class="height-full ad-avoider position-relative float-left">
-			<h1 class="unselectable no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="sponsors-title">Sponsors</h1>
+			<h1 class=" no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="sponsors-title">Sponsors</h1>
 
 			</div>
 		</div>
@@ -294,9 +294,9 @@
 		</div>
 		<div class="zindex-top" id="info-block">
 			<!-- <div class="width-full height-full blur-50 position-absolute position-absolute-top"></div> -->
-			<h3 class="link unselectable">Georgia State University</h3>
-			<h1 class="no-cursor unselectable">10 . 21 . 16</h1>
-			<div class="open-sans position-inline-inner-middle unselectable" id="rsvp-button">regisTER</div>
+			<h3 class="link ">Georgia State University</h3>
+			<h1 class="no-cursor ">10 . 21 . 16</h1>
+			<div class="open-sans position-inline-inner-middle " id="rsvp-button">regisTER</div>
 			
 		</div>
 	</div>
