mobile slideshow active

--- a/index.html
+++ b/index.html
@@ -268,9 +268,14 @@
 		</div>
 
 		<!-- petit image -->
-		<div class="mobile-cover-full-image position-relative float-left" id="petit-image">
-			<!-- <div class="width-full height-full position-relative float-left background-big-image min-width-999" id="petit-image"></div> -->
+		<div class="mobile-cover-full-image position-relative float-left overflow-auto">
+			<div class="height-full-screen position-relative float-left" id="slideshow">
+				<div class="mobile-cover-full-image position-relative float-left slideshow-image" id="petit-image"></div>
+				<div class="mobile-cover-full-image position-relative float-left slideshow-image" id="standing-image"></div>
+				<div class="mobile-cover-full-image position-relative float-left slideshow-image" id="browsing-image"></div>
+			</div>
 		</div>
+		
 		
 
 		<!-- sponsors -->
