--- a/index.html
+++ b/index.html
@@ -270,7 +270,9 @@
 		<!-- petit image -->
 		<div class="mobile-cover-full-image position-relative float-left overflow-auto">
 			<div class="height-full-screen position-relative float-left" id="slideshow">
-				<div class="mobile-cover-full-image position-relative float-left slideshow-image" id="petit-image"></div>
+				<div class="mobile-cover-full-image position-relative float-left slideshow-image" id="petit-image">
+					<span id="slideshow-start-text">swipe left<br>for more >></span>
+				</div>
 				<div class="mobile-cover-full-image position-relative float-left slideshow-image" id="standing-image"></div>
 				<div class="mobile-cover-full-image position-relative float-left slideshow-image" id="browsing-image"></div>
 			</div>
