--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
 		<div class="height-full ad-avoider position-relative float-left">
 			<h1 class=" no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="faq-title">FAQ</h1>
 			<div class="faq-container position-relative float-left height-full width-full">
-				<div class="faq-item float-left clear-left">
+			<div class="faq-item float-left clear-left">
 		        	<h4>What is hackGSU?</h4>
-		        	hackGSU is the Hackathon hosted by the GSU Computer Science Department's ACM & IEEE student organizations. <b> 100% free of charge, Lots of Food, $$ Prizes $$. </b> This semester, hackGSU will be a 500+ participant event taking place from October 21th-23th.			    	</div>
+		        	hackGSU is the Hackathon hosted by the GSU Computer Science Department's ACM & IEEE student organizations. <b> 100% free of charge, Lots of Food, $$ Prizes $$. </b> This semester, hackGSU will be a 500+ participant event taking place from October 21th-23th.</div>
 		    	<div class="faq-item float-left">
 		        	<h4>I have never been to a hackathon before, what should I do?</h4>
 		        	No problem! We will be providing mentors during the hackathon and we will be running workshops during the hackathon.
@@ -243,12 +243,12 @@
 		        	The deadline to register is on October 20th at 11:59pm EST.
 		    	</div>
 		    	<div class="faq-item float-left">
-		        	<h4>How can I confirm that my registration was received for HackGSU?</h4>
-		        	Login to your my.mlh.io account, and choose My Profile > Authorized Apps. Your HackGSU registration will display, including the date that you registered.
+		        	<h4>How can I confirm that my registration was received for hackGSU?</h4>
+		        	Login to your my.mlh.io account, and choose My Profile > Authorized Apps. Your hackGSU registration will display, including the date that you registered.
 		    	</div>    	
 		    	<div class="faq-item float-right">
 		        	<h4>How do I obtain travel reimbursement?</h4>
-		        	We will provide up to $200 in individual travel reimbursement this year, while funds are available (see above). To obtain the travel reimbursement, you must have receipts. You must not live or go to school in Georgia to be eligible for travel reimbursement. Funds are dispersed on a first-come, first-served basis, based on the timestamp of your pre-event email request. Examples of eligible travel expenses include gas, airline tickets, etc. There will be plenty of free food at the HackGSU event, so we are not reimbursing food expenses. We are not reimbursing hotel expenses at this time (you are welcome to bring a sleeping bag).
+		        	We will provide up to $200 in individual travel reimbursement this year, while funds are available (see above). To obtain the travel reimbursement, you must have receipts. You must not live or go to school in Georgia to be eligible for travel reimbursement. Funds are dispersed on a first-come, first-served basis, based on the timestamp of your pre-event email request. Examples of eligible travel expenses include gas, airline tickets, etc. There will be plenty of free food at the hackGSU event, so we are not reimbursing food expenses. We are not reimbursing hotel expenses at this time (you are welcome to bring a sleeping bag).
 		    	</div>
 		    	<div class="faq-item float-right">
 		        	<h4>Is there a Code of Conduct?</h4>
@@ -256,11 +256,11 @@
 		    	</div>
 		    	<div class="faq-item center padding-top-20">
 		        	<h4>*I'm in highschool and I would like to attend...</h4>
-		        	We'd love to see you. Please email us at <a href="mailto:hackathon@cs.gsu.edu?subject=HackGSU-Fall2016-highschool">hackathon@cs.gsu.edu</a>, so that we can coordinate the parental permissions that you'll need! If you're local to Georgia, please register!If you're not from Georgia, please register, and make sure to drop us a note so that we can help reimburse travel expenses (while funds last).
+		        	We'd love to see you. Please email us at <a href="mailto:hackathon@cs.gsu.edu?subject=hackGSU-Fall2016-highschool">hackathon@cs.gsu.edu</a>, so that we can coordinate the parental permissions that you'll need! If you're local to Georgia, please register!If you're not from Georgia, please register, and make sure to drop us a note so that we can help reimburse travel expenses (while funds last).
 		    	</div>
 		    	<div class="faq-item center">
 		        	<h4>I have another question...</h4>
-		        	Please feel free to email us at <a href="mailto:hackathon@cs.gsu.edu?subject=HackGSU-Fall2016-question">hackathon@cs.gsu.edu</a> for any questions you have!<br>
+		        	Please feel free to email us at <a href="mailto:hackathon@cs.gsu.edu?subject=hackGSU-Fall2016-question">hackathon@cs.gsu.edu</a> for any questions you have!<br>
 		    	</div>
 			</div>
 		</div>
