--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 			    	</div>
 			    	<div class="faq-item float-right">
 			        	<h4>I am not near to Atlanta, is there travel reimbursement?</h4>
-			        	We will provide up to $200 in individual travel reimbursement this year, while funds are available. Please let us know in advance if you live out of state so that we can coordinate with you! (If we are not notified in advance of your travel reimbursement request, unfortunately we cannot guarantee that we will be able to reimburse you).
+			        	Travel reimbursement requests are closed. We will be providing up to $200 in individual travel reimbursement this year, while funds are available, for requests received before the cutoff. (If we were not notified in advance of your travel reimbursement request, unfortunately we cannot guarantee that we will be able to reimburse you).
 			    	</div>			    
 			    	<div class="faq-item float-left">
 			        	<h4>But I don't have an idea, what should I do?</h4>
@@ -249,8 +249,7 @@
 			    	</div>    	
 			    	<div class="faq-item float-right">
 			        	<h4>How do I obtain travel reimbursement?</h4>
-			        	We will provide up to $200 in individual travel reimbursement this year, while funds are available (see above). To obtain the travel reimbursement, you must have receipts. You must not live or go to school in Georgia to be eligible for travel reimbursement. Funds are dispersed on a first-come, first-served basis, based on the timestamp of your pre-event email request. Examples of eligible travel expenses include gas, airline tickets, etc. There will be plenty of free food at the HackGSU event, so we are not reimbursing food expenses. We are not reimbursing hotel expenses at this time (you are welcome to bring a sleeping bag).
-			    	</div>
+			        	Travel reimbursement requests are closed. We will be providing up to $200 in individual travel reimbursement this year, while funds are available (see above), for requests received before the cutoff. To obtain the travel reimbursement, you must have receipts. <u>You must not live or go to school in Georgia to be eligible for travel reimbursement.</u> Funds will be dispersed on a first-come, first-served basis, based on the timestamp of your pre-event email request. Examples of eligible travel expenses include gas, airline tickets, etc. There will be plenty of free food at the HackGSU event, so we are not reimbursing food expenses. We are not reimbursing hotel expenses at this time (you are welcome to bring a sleeping bag).			    	</div>
 			    	<div class="faq-item float-right">
 			        	<h4>Is there a Code of Conduct?</h4>
 			        	Yes, we abide by the <a href="http://static.mlh.io/docs/mlh-code-of-conduct.pdf">Major League Hacking Code of Conduct.</a>
