--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 		<!-- welcome -->
 		<div class="full-image height-full-screen position-relative float-left overflow-hidden">
 			
-			<div class="width-full height-full background-blue position-absolute zindex-3 opacity-50" id="main-image-cover">
+			<div class="width-full-screen height-full background-blue position-absolute zindex-3 opacity-50" id="main-image-cover">
 				<h1 class="font-white zindex-top no-margin position-absolute-middle title-font-size  no-cursor" id="title">hackGSU</h1>
 			</div>
 			<div class="position-absolute position-absolute-top width-full-screen height-full-screen" id="back-image"></div>
 				<!-- <img class="width-full invisible" src="images/top-image-sizer.png"> -->
 				
 			<!-- </div> -->
-			<div class="width-full height-full zindex-top position-absolute position-absolute-top">
+			<div class="width-full-screen height-full zindex-top position-absolute position-absolute-top">
 				<div class="desktop-top-links-positioning mobile-top-links-positioning">
 					<div class="mobile-top-links-container">
 						<div class="position-relative float-left unselectable link nav-link width-third" id="register-link">
@@ -41,7 +41,7 @@
 		</div>
 
 		<!-- schedule -->
-		<div class="width-full height-auto position-relative float-left overflow-x-hidden" id="schedule">
+		<div class="width-full-screen height-auto position-relative float-left overflow-x-hidden" id="schedule">
 			<div class="height-full ad-avoider position-relative float-left" id="schedule-container">
 				<h1 class=" no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="schedule-title">Schedule</h1>
 				<div class="center-text" id="view-text-wrapper">
@@ -206,7 +206,7 @@
 		</div>
 
 		<!-- little faq -->
-		<div class="height-auto width-full berry-back position-relative float-left" id="bottom">
+		<div class="height-auto width-full-screen berry-back position-relative float-left" id="bottom">
 			<div class="height-full ad-avoider position-relative float-left">
 				<h1 class=" no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="faq-title">FAQ</h1>
 				<div class="faq-container position-relative float-left height-full width-full">
@@ -304,7 +304,7 @@
 		
 
 		<!-- sponsors -->
-		<div class="width-full height-full-screen position-relative float-left mobile-cover-full-image teal-back" id="sponsors">
+		<div class="width-full-screen height-full-screen position-relative float-left mobile-cover-full-image teal-back" id="sponsors">
 			<div class="height-full ad-avoider position-relative float-left">
 				<h1 class=" no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="sponsors-title">Sponsors</h1>
 				<div class="position-relative float-left clear-both" id="sponsors-image">
